fix tech buttons overflow hidden

--- a/app/css/overrides.scss
+++ b/app/css/overrides.scss
@@ -17,3 +17,8 @@
   left: 0;
   right: 0;
 }
+
+filters .ui.button {
+  margin-right: 0.75em;
+  margin-bottom: 0.75em;
+}
